ros/servo controller/ros2_ws/log/build_2024-06-04_11-12-13/my_ax12_servo_controller/stderr.log
  File "/home/ubuntu/ros2_ws/install/my_ax12_servo_controller/lib/python3.10/site-packages/my_ax12_servo_controller/my_ax12_node.py", line 66
    def execute_getstatus(self, servo_id, command)
                                                  ^
SyntaxError: expected ':'

